[package]
name = "svg-to-png"
version = "0.1.0"
authors = ["Y.Shing <y.shing@me.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "svg_to_png"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[features]

[dependencies]
resvg = "0.11.0"
usvg = "0.11.0"
png = "0.16.7"
base64 = "0.12.3"
cslice = "0.3.0"
neon-serde = "0.4.0"
serde_derive = "1.0.80"
serde = "1.0.80"
neon = "0.4.0-napi.1"